<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailFilmActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            tools:context=".ui.DetailFilmActivity">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_poster"
                android:layout_width="134dp"
                android:layout_height="200dp"
                android:contentDescription="@string/poster_film"
                android:src="@color/grey_500"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/roundedSquare"
                app:strokeColor="@color/grey_500"
                app:strokeWidth="3dp" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_poster"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="title" />

            <TextView
                android:id="@+id/genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_poster"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                tools:text="genre" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/yellow_400"
                app:cardCornerRadius="5dp"
                app:layout_constraintStart_toEndOf="@id/img_poster"
                app:layout_constraintTop_toBottomOf="@id/genre">

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="rating" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/red_400"
                app:cardCornerRadius="10dp"
                app:layout_constraintStart_toEndOf="@id/cv_rating"
                app:layout_constraintTop_toBottomOf="@id/genre">

                <TextView
                    android:id="@+id/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="duration" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_poster"
                android:text="@string/overview"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overview"
                tools:text="description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include android:id="@+id/progress_bar" layout="@layout/progress_view" />

</RelativeLayout>