<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favorite_film"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_favorite_film"
        android:title="@string/favorite_menu" />

</menu>